// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`AgentCard matches snapshot for evolved tier 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ 🤖 Claude Sonnet                                                                                 │
│                                                                                                  │
│ Type: AI/Code                                                                                    │
│ Tier: evolved                                                                                    │
│ Provider: anthropic                                                                              │
│ Model: claude-sonnet-4                                                                           │
│                                                                                                  │
│ Stats                                                                                            │
│ Speed        █████████████████░░░  85                                                            │
│ Accuracy     ██████████████████░░  90                                                            │
│ Power        ██████████████████░░  88                                                            │
│ Efficiency   ██████████████████░░  92                                                            │
│ Versatility  █████████████████░░░  87                                                            │
│                                                                                                  │
│ Performance                                                                                      │
│ Requests: 100                                                                                    │
│ Tokens: 50000                                                                                    │
│ Success: 95.0%                                                                                   │
│ Latency: 1200ms                                                                                  │
│                                                                                                  │
│ Evolution:                                                                                       │
│ ← Claude Haiku → Claude Opus                                                                     │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`AgentCard matches snapshot for legendary tier 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ 💎 Claude Opus                                                                                   │
│                                                                                                  │
│ Type: AI/Code                                                                                    │
│ Tier: legendary                                                                                  │
│ Provider: anthropic                                                                              │
│ Model: claude-opus-4                                                                             │
│                                                                                                  │
│ Stats                                                                                            │
│ Speed        ███████████████████░  95                                                            │
│ Accuracy     ████████████████████  98                                                            │
│ Power        ████████████████████  99                                                            │
│ Efficiency   █████████████████░░░  85                                                            │
│ Versatility  ███████████████████░  96                                                            │
│                                                                                                  │
│ Performance                                                                                      │
│ Requests: 100                                                                                    │
│ Tokens: 50000                                                                                    │
│ Success: 95.0%                                                                                   │
│ Latency: 1200ms                                                                                  │
│                                                                                                  │
│ Evolution:                                                                                       │
│ ← Claude Sonnet                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`AgentCard matches snapshot for starter tier 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ⚡ Claude Haiku                                                                                  │
│                                                                                                  │
│ Type: AI/Code                                                                                    │
│ Tier: starter                                                                                    │
│ Provider: anthropic                                                                              │
│ Model: claude-haiku-4                                                                            │
│                                                                                                  │
│ Stats                                                                                            │
│ Speed        ████████████████████  98                                                            │
│ Accuracy     ███████████████░░░░░  75                                                            │
│ Power        █████████████░░░░░░░  65                                                            │
│ Efficiency   ███████████████████░  95                                                            │
│ Versatility  ██████████████░░░░░░  70                                                            │
│                                                                                                  │
│ Performance                                                                                      │
│ Requests: 100                                                                                    │
│ Tokens: 50000                                                                                    │
│ Success: 95.0%                                                                                   │
│ Latency: 1200ms                                                                                  │
│                                                                                                  │
│ Evolution:                                                                                       │
│ → Claude Sonnet                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`AgentList matches snapshot 1`] = `
"#   Name                     Type                Tier           Provider
───────────────────────────────────────────────────────────────────────────────
1   🤖 Claude Sonnet          AI/Code             evolved        anthropic
2   💎 Claude Opus            AI/Code             legendary      anthropic
3   ⚡ Claude Haiku           AI/Code             starter        anthropic"
`;

exports[`AgentList matches snapshot with empty list 1`] = `
"#   Name                     Type                Tier           Provider
───────────────────────────────────────────────────────────────────────────────"
`;

exports[`TeamDisplay matches snapshot 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ SQUAD: Elite Coding Squad                                                                        │
│ High-performance team for complex coding tasks                                                   │
│                                                                                                  │
│ Configuration:                                                                                   │
│   Max Concurrent: 3                                                                              │
│   Task Distribution: balanced                                                                    │
│   Fallback: true                                                                                 │
│                                                                                                  │
│ 1. 🤖 Claude Sonnet                                                                              │
│    evolved | anthropic | claude-sonnet-4                                                         │
│ 2. 💎 Claude Opus                                                                                │
│    legendary | anthropic | claude-opus-4                                                         │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`TeamDisplay matches snapshot without config 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ SQUAD: Elite Coding Squad                                                                        │
│ High-performance team for complex coding tasks                                                   │
│                                                                                                  │
│ 1. 🤖 Claude Sonnet                                                                              │
│    evolved | anthropic | claude-sonnet-4                                                         │
│ 2. 💎 Claude Opus                                                                                │
│    legendary | anthropic | claude-opus-4                                                         │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`EvolutionTree matches snapshot 1`] = `
"Evolution Tree for Claude Sonnet:

  Claude Haiku
    ↓
  Claude Sonnet 🤖
    ↓
  Claude Opus"
`;

exports[`TaskSpecializations matches snapshot 1`] = `
"Task Specializations for Claude Sonnet:

  ⚡ programmer
  🔍 reviewer"
`;

exports[`RegistryStats matches snapshot 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Agent Registry Statistics                                                                        │
│                                                                                                  │
│ Total Agents: 15                                                                                 │
│ Total Squads: 5                                                                                  │
│                                                                                                  │
│ Tiers                                                                                            │
│   Starter: 6                                                                                     │
│   Evolved: 6                                                                                     │
│   Legendary: 3                                                                                   │
│                                                                                                  │
│ Performance                                                                                      │
│ Total Requests: 500                                                                              │
│ Total Tokens: 1500000                                                                            │
│ Avg Success: 94.5%                                                                               │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`AgentComparison matches snapshot 1`] = `
"Agent Comparison: Claude Sonnet vs Claude Opus

  Speed            85 vs  95
  Accuracy         90 vs  98
  Power            88 vs  99
  Efficiency       92 vs  85
  Versatility      87 vs  96"
`;

exports[`AgentComparison matches snapshot with equal stats 1`] = `
"Agent Comparison: Claude Sonnet vs Claude Sonnet

  Speed            85 vs  85
  Accuracy         90 vs  90
  Power            88 vs  88
  Efficiency       92 vs  92
  Versatility      87 vs  87"
`;
